@@ -1186,8 +1186,8 @@ public class BasisStandortSuchen extends AbstractModul
 					}
 				}
 			};
-			this.objektEditAction.putValue(Action.MNEMONIC_KEY, new Integer(
-					KeyEvent.VK_B));
+			this.objektEditAction.putValue(Action.MNEMONIC_KEY,
+                Integer.valueOf(KeyEvent.VK_B));
 			this.objektEditAction.putValue(Action.ACCELERATOR_KEY,
 											KeyStroke.getKeyStroke(KeyEvent.VK_ENTER, 0, false));
 		}
@@ -1212,8 +1212,8 @@ public class BasisStandortSuchen extends AbstractModul
 	                }
 	            }
 	        };
-	        this.objektBetreiberEditAction.putValue(Action.MNEMONIC_KEY, new Integer(
-	            KeyEvent.VK_F1));
+	        this.objektBetreiberEditAction.putValue(Action.MNEMONIC_KEY,
+                Integer.valueOf(KeyEvent.VK_F1));
 	        this.objektBetreiberEditAction.putValue(Action.ACCELERATOR_KEY,
 	            KeyStroke.getKeyStroke(KeyEvent.VK_F1, 0, false));
 	    }
@@ -1240,8 +1240,8 @@ public class BasisStandortSuchen extends AbstractModul
 	                }
 	            }
 	        };
-	        this.objektStandortEditAction.putValue(Action.MNEMONIC_KEY, new Integer(
-	            KeyEvent.VK_F2));
+	        this.objektStandortEditAction.putValue(Action.MNEMONIC_KEY,
+                Integer.valueOf(KeyEvent.VK_F2));
 	        this.objektStandortEditAction.putValue(Action.ACCELERATOR_KEY,
 	            KeyStroke.getKeyStroke(KeyEvent.VK_F2, 0, false));
 	    }
@@ -1296,8 +1296,8 @@ public class BasisStandortSuchen extends AbstractModul
 					}
 				}
 			};
-			this.objektLoeschAction.putValue(Action.MNEMONIC_KEY, new Integer(
-					KeyEvent.VK_L));
+			this.objektLoeschAction.putValue(Action.MNEMONIC_KEY,
+                Integer.valueOf(KeyEvent.VK_L));
 			this.objektLoeschAction.putValue(Action.ACCELERATOR_KEY,
 												KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0, false));
 		}
@@ -1519,8 +1519,8 @@ public class BasisStandortSuchen extends AbstractModul
                     }
                 }
             };
-            this.AdresseEditAction.putValue(Action.MNEMONIC_KEY, new Integer(
-                KeyEvent.VK_B));
+            this.AdresseEditAction.putValue(Action.MNEMONIC_KEY,
+                Integer.valueOf(KeyEvent.VK_B));
             this.AdresseEditAction.putValue(Action.ACCELERATOR_KEY,
                 KeyStroke.getKeyStroke(KeyEvent.VK_ENTER, 0, false));
         }
