@@ -312,7 +312,7 @@ public class Anh49DetailsPanel extends JPanel {
                     }
                 }
             };
-            abscheiderLoeschAction.putValue(Action.MNEMONIC_KEY, new Integer(
+            abscheiderLoeschAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(
                 KeyEvent.VK_L));
             abscheiderLoeschAction.putValue(Action.ACCELERATOR_KEY,
                 KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0, false));
@@ -333,7 +333,7 @@ public class Anh49DetailsPanel extends JPanel {
                     editAbscheider(neuerAbscheider);
                 }
             };
-            abscheiderNeuAction.putValue(Action.MNEMONIC_KEY, new Integer(
+            abscheiderNeuAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(
                 KeyEvent.VK_N));
             // abscheiderNeuAction.putValue(Action.ACCELERATOR_KEY,
             // KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0, false));
